syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Teamcity.Host";

package csi;

service Flow {
  rpc Completed (google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Console {
  rpc WriteLine (WriteLineRequest) returns (google.protobuf.Empty);
}

enum Color {
    Default = 0;
    Header = 1;
    Trace = 2;
    Success = 3;
    Warning = 4;
    Error = 5;
    Details = 6;
}

message WriteLineRequest {
  string line = 1;
  Color color = 2; 
}

service Log {
  rpc Error (ErrorRequest) returns (google.protobuf.Empty);
  rpc Warning (WarningRequest) returns (google.protobuf.Empty);
  rpc Info (InfoRequest) returns (google.protobuf.Empty);
  rpc Trace (TraceRequest) returns (google.protobuf.Empty);
}

message ErrorRequest {
  string error = 1;
  optional string errorId = 2;
}

message WarningRequest {
  string warning = 1;
}

message InfoRequest {
  string text = 1;
}

message TraceRequest {
  string trace = 1;
  optional string origin = 2;
}
